--- a/1.Home.css
+++ b/1.Home.css
@@ -1,31 +1,123 @@
 /*Body*/
+
 body {
+    font-family: Arial, sans-serif;
     background-image: url(https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/434310/02f0eabf17fe99701d05f371387381e3dd696c6c.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    margin: 5px 0px 0px;
+    margin: 0px 0px 0px;
+    padding: 0rem;
+    color: silver;
 }
 
 .headder{
-    padding-left: 1rem;
-    display:block;
-    font-size: 2.2rem;
+    background-color: #111;
+    display:inline-flex;
+    font-size: 1.5rem;
     text-align: center;
-    max-width: 500px;
+    position:fixed;
+    max-height: 4rem;
+    margin-right: 1rem;
+    width:100%;
+    border-radius: 4px;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+}
+.main{
+    padding: 0.1rem;
+    margin-top: 10rem;
+    margin-right: 0rem;
+    text-align: center;
+}
+table{
+    max-height: 4rem;
+    margin: auto;
+    position: relative;
+    left: 25rem;
 }
 td{
-    padding: auto;
     border-radius: 5px;
-    padding: 2rem;
+    padding: 1rem;
+    margin-bottom: 4rem;
 }
+
+
 a:link, a:visited {
-    color: silver;
+   /* color: rgba(192, 192, 192, 0.87);*/
     text-decoration: none;
 
 }
-img{
-    height: 80px;
+.top_logo{
+    margin: 0.3rem 0rem 0rem 3rem;
+    height: 50px;
 }
-.container1{
-    margin-top: 2rem;
+
+
+/*outter copy*/
+
+.glow-on-hover {
+    font-family:Arial, sans-serif ;
+    font-size: 1.5rem;
+    width:15rem;
+    height:5rem;
+    border: none;
+    outline: none;
+    color: silver;
+    background:transparent;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+.glow-on-hover:hover{
+    color: #000;
+}
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+   /* background: linear-gradient(45deg, #021f4b, #9821b6, #056180, #740570, #a13b6d, rgb(11,90,124));
+*/
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000;
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:hover:before {
+    opacity: 1;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background:transparent;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
 }
